# jaka_ros2

./: .clangd  .gitignore  README.md  jaka_ros2_documentation-中文版.md  jaka_ros2_documentation.md  justfile  launches.py  test_multiple_interfaces.cpp
src/alson_client/: CMakeLists.txt  package.xml
src/alson_client/include/alson_client/: alson_client.h  alson_client_node.h
src/alson_client/launch/: alson_client_.launch.py  alson_client_test.launch.py
src/alson_client/src/: alson_client.cpp  alson_client_node.cpp  alson_client_test_node.py  main.cpp
src/auto_charge/: CMakeLists.txt  package.xml
src/auto_charge/config/: alson_config.yaml
src/auto_charge/include/: alson_client_controller.h  mainwindow.h
src/auto_charge/include/auto_charge/: auto_charge_node.h  camera_controller.h  robot_manager.h
src/auto_charge/qml/: AlsonClientUI.qml  RobotControlUI.qml  main.qml  qtquickcontrols2.conf  resources.qrc
src/auto_charge/qml/components/: FloatPoseInputDialog.qml  NetworkConfigPane.qml
src/auto_charge/src/: auto_charge_node.cpp  camera_controller.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  robot_manager.cpp
src/jaka_a12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_a12_moveit_config/config/: initial_positions.yaml  jaka_a12.ros2_control.xacro  jaka_a12.srdf  jaka_a12.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/jaka_a12_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/jaka_a5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_a5_moveit_config/config/: initial_positions.yaml  jaka_a5.ros2_control.xacro  jaka_a5.srdf  jaka_a5.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/jaka_a5_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  gazebo.launch.py  move_group.launch.py  (+6 more)
src/jaka_c12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_c5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_c7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_description/: CMakeLists.txt  package.xml
src/jaka_description/config/: jaka_zu12_rviz2.rviz
src/jaka_description/launch/: jaka_zu12_rviz2_launch.py  jaka_zu12_simple_launch.py  test_launch.py
src/jaka_description/meshes/tool/: charge_box.stl
src/jaka_description/meshes/tools/: connect_tools.stl  frame.stl
src/jaka_description/urdf/: jaka_a12.urdf  jaka_a5.urdf  jaka_c12.urdf  jaka_c5.urdf  jaka_c7.urdf  jaka_minicobo.urdf  jaka_pro12.urdf  jaka_pro18.urdf  jaka_pro5.urdf  jaka_s12.urdf  jaka_s5.urdf  jaka_s7.urdf  jaka_zu12.urdf  jaka_zu12_with_tool.urdf  jaka_zu12_with_tool.urdf.xacro  jaka_zu20.urdf  jaka_zu3.urdf  jaka_zu30.urdf  jaka_zu5.urdf  jaka_zu7.urdf  simple_box.urdf
src/jaka_description/urdf/tools/: gripper_tool.urdf.xacro
src/jaka_manipulation/: CMakeLists.txt  README.md  package.xml
src/jaka_manipulation/config/: manipulation_config.yaml
src/jaka_manipulation/config/scene/: 1.scene  default_scene.json
src/jaka_manipulation/docs/: tool_management.md
src/jaka_manipulation/include/jaka_manipulation/: alson_client.h  alson_client_node.h  manipulation_node.h  scene_manager.h
src/jaka_manipulation/launch/: alson_client_test.launch.py  gazebo_demo.launch.py  manipulation_demo.launch.py  planning_demo.launch.py  real_robot_demo.launch.py
src/jaka_manipulation/scripts/: test_manipulation.py
src/jaka_manipulation/src/: autocharge_move_group.h  manipulation_node.cpp  scene_manager.cpp
src/jaka_manipulation/src/alson/: alson_client.cpp  alson_client_node.cpp  alson_client_test_node.py  main.cpp
src/jaka_manipulation/src/auto_charge/: main.cpp
src/jaka_manipulation/src/manipulation/: main.cpp  manipulation_node.cpp  scene_manager.cpp
src/jaka_msgs/: CMakeLists.txt
src/jaka_pro12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_pro16_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_pro18_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_pro5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_pro7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_s12_moveit_config/: CMakeLists.txt
src/jaka_s5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_s7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu18_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu20_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu30_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_zu5_moveit_config/config/: initial_positions.yaml  jaka_zu5.ros2_control.xacro  jaka_zu5.srdf  jaka_zu5.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/jaka_zu5_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/jaka_zu7_moveit_config/: .setup_assistant  package.xml
src/jx_zu12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_controller/: CMakeLists.txt  package.xml  test_services.py
src/robot_controller/config/: robot_controller.yaml
src/robot_controller/include/jaka_sdk/: JAKAZuRobot.h  jkerr.h  jktypes.h
src/robot_controller/include/robot_controller/: robot_controller.h
src/robot_controller/launch/: robot_controller.launch.py
src/robot_controller/scripts/: test_set_bool_services.py
src/robot_controller/src/: robot_controller.cpp  robot_controller_node.cpp
(+293 files in other folders)
